# staubli-isaac-sim

./: README.md
ros1_ws/: README.md
ros1_ws/config/: usb_cam_ros2_camera_info.yml  usb_cam_ros2_params.yml
ros1_ws/docker/: detectnet_compose.yml  detectnet_sim_compose.yml  real_compose.yml  ros1.Dockerfile  ros2_object_detection.Dockerfile  ros_nitros_bridge.Dockerfile  sim_compose.yml  (+2 more)
ros1_ws/src/staubli_tx2_60l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros1_ws/src/staubli_tx2_60l_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  staubli_tx2_60l.srdf
ros1_ws/src/staubli_tx2_60l_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  staubli_isaac_moveit.launch  staubli_tx2_60l_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
ros1_ws/src/staubli_tx2_60l_moveit_config/msg/: BBoxes.msg
ros1_ws/src/staubli_tx2_60l_moveit_config/scripts/: color_calibration.py  color_detection_node.py  color_detection_node_simone.py  color_detection_node_simone2.py  detect_color  move_group_python_interface_tutorial.py  staubli_ik.py  staubli_ik_timer.py
ros1_ws/src/staubli_tx2_60l_moveit_config/scripts/Backup Matteo Project/: color_detection_node.py
ros2_ws/: README.md
(+71 files in other folders)
